# Digital_tools_for_finance_project

./: .gitignore  README.md
Excerise - apps/: Notebook_virtual_env.ipynb  app.R
final/final_project/: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
final/final_project/docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
final/final_project/src/final_project/: __init__.py  cli.py
final/final_project/tests/: __init__.py  test_final_project.py
homework/homework5(week5)/: data.feather  generate.py  times.txt
homework/week2/: Dockerfile  plot.py
homework/week4/: function.txt
