[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "final_project"
version = "0.1.0"
description = "final project"
readme = "README.rst"
authors = [
  {name = "Zihan Yujie Wenqian", email = "zihan.liu@uzh.ch"}
]
maintainers = [
  {name = "Zihan Yujie Wenqian", email = "zihan.liu@uzh.ch"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/zihanltesla/final_project/issues"
changelog = "https://github.com/zihanltesla/final_project/blob/master/changelog.md"
homepage = "https://github.com/zihanltesla/final_project"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

